Async methods implementation
